--- a/src/Treehouse.FitnessFrog/Views/Entries/Add.cshtml
+++ b/src/Treehouse.FitnessFrog/Views/Entries/Add.cshtml
@@ -31,6 +31,8 @@
 
 @*Use Html Helper method to render the form element*@
 
+@Html.ValidationSummary("The following erros were found: ",new { @class = "alert alert-danger"})   @*Displaying all validation summary messages at top of the form *@
+
 @using (Html.BeginForm())
 {
     <div class="row">
@@ -46,11 +48,13 @@
                 @Html.LabelFor(m => m.ActivityId, new { @class = "control-label" })
                 @Html.DropDownListFor(m => m.ActivityId, 
                             (SelectList)ViewBag.ActivitiesSelectListItems,"", new { @class = "form-control" })
+                @Html.ValidationMessageFor(m=>m.ActivityId)
             </div>
 
             <div class="form-group">
                 @Html.LabelFor(m => m.Duration, new { @class = "control-label" })
                 @Html.TextBoxFor(m => m.Duration, null, new { @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.Duration, null)
             </div>
 
             <div class="form-group">
@@ -82,8 +86,9 @@
         <div class="col-md-6">
 
             <div class="form-group">
-                @Html.LabelFor(m=>m.Notes, new { @class = "control-label" })
-                @Html.TextAreaFor(m=>m.Notes, 14, 20, new { @class = "form-control" })
+                @Html.LabelFor(m => m.Notes, new { @class = "control-label" })
+                @Html.TextAreaFor(m => m.Notes, 14, 20, new { @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.Notes,null, new { @class = "alert alert-danger" })
             </div>
 
         </div>
