--- a/src/Treehouse.FitnessFrog/Views/Entries/Add.cshtml
+++ b/src/Treehouse.FitnessFrog/Views/Entries/Add.cshtml
@@ -1,4 +1,4 @@
-﻿<!--Make view strongly typed by adding the model directive-->   
+﻿<!--Make view strongly typed by adding the model directive-->
 
 @model Treehouse.FitnessFrog.Models.Entry
 
@@ -22,33 +22,34 @@
 }
 
 @*<select>
-    <option value="1">Item 1</option>
-    <option value="2" selected>Item 2</option>
-</select>*@
+        <option value="1">Item 1</option>
+        <option value="2" selected>Item 2</option>
+    </select>*@
 
 <h2>@ViewBag.Title</h2>
 
 
 @*Use Html Helper method to render the form element*@
 
-@Html.ValidationSummary("The following erros were found: ",new { @class = "alert alert-danger"})   @*Displaying all validation summary messages at top of the form *@
 
 @using (Html.BeginForm())
 {
+    @Html.ValidationSummary("The following erros were found: ", new { @class = "alert alert-danger" }) @*Displaying all validation summary messages at top of the form *@
+
     <div class="row">
 
         <div class="col-md-6">
 
             <div class="form-group">
-                @Html.LabelFor(m=>m.Date, new { @class = "control-label" })
-                @Html.TextBoxFor(m=>m.Date,"{0:d}", new { @class = "form-control datepicker" })
+                @Html.LabelFor(m => m.Date, new { @class = "control-label" })
+                @Html.TextBoxFor(m => m.Date, "{0:d/M/yyyy}", new { @class = "form-control datepicker" })
             </div>
 
             <div class="form-group">
                 @Html.LabelFor(m => m.ActivityId, new { @class = "control-label" })
-                @Html.DropDownListFor(m => m.ActivityId, 
+                @Html.DropDownListFor(m => m.ActivityId,
                             (SelectList)ViewBag.ActivitiesSelectListItems,"", new { @class = "form-control" })
-                @Html.ValidationMessageFor(m=>m.ActivityId)
+                @Html.ValidationMessageFor(m => m.ActivityId)
             </div>
 
             <div class="form-group">
@@ -70,7 +71,7 @@
                         @Html.RadioButtonFor(m => m.Intensity, Entry.IntensityLevel.High) @Entry.IntensityLevel.High
                     </label>
                 </div>
-                
+
             </div>
 
             <div class="form-group">
@@ -78,7 +79,7 @@
                     <label>
                         @Html.CheckBoxFor(m => m.Exclude) @Html.DisplayNameFor(m => m.Exclude)
                     </label>
-                </div>                
+                </div>
             </div>
 
         </div>
@@ -88,7 +89,7 @@
             <div class="form-group">
                 @Html.LabelFor(m => m.Notes, new { @class = "control-label" })
                 @Html.TextAreaFor(m => m.Notes, 14, 20, new { @class = "form-control" })
-                @Html.ValidationMessageFor(m => m.Notes,null, new { @class = "alert alert-danger" })
+                @Html.ValidationMessageFor(m => m.Notes)
             </div>
 
         </div>
@@ -109,4 +110,3 @@
 
 
 
- 
