--- a/src/Treehouse.FitnessFrog/Views/Entries/Add.cshtml
+++ b/src/Treehouse.FitnessFrog/Views/Entries/Add.cshtml
@@ -31,7 +31,6 @@
 
 @*Use Html Helper method to render the form element*@
 
-
 @using (Html.BeginForm())
 {
     @Html.ValidationSummary("The following erros were found: ", new { @class = "alert alert-danger" }) @*Displaying all validation summary messages at top of the form *@
@@ -42,14 +41,14 @@
 
             <div class="form-group">
                 @Html.LabelFor(m => m.Date, new { @class = "control-label" })
-                @Html.TextBoxFor(m => m.Date, "{0:d/M/yyyy}", new { @class = "form-control datepicker" })
-            </div>
+                @Html.TextBoxFor(m => m.Date, "{0:d}", new { @class = "form-control datepicker" })
+            </div>  
 
             <div class="form-group">
                 @Html.LabelFor(m => m.ActivityId, new { @class = "control-label" })
                 @Html.DropDownListFor(m => m.ActivityId,
                             (SelectList)ViewBag.ActivitiesSelectListItems,"", new { @class = "form-control" })
-                @Html.ValidationMessageFor(m => m.ActivityId)
+                @Html.ValidationMessageFor(m => m.ActivityId)   @*Validation message at field level*@
             </div>
 
             <div class="form-group">
@@ -89,7 +88,7 @@
             <div class="form-group">
                 @Html.LabelFor(m => m.Notes, new { @class = "control-label" })
                 @Html.TextAreaFor(m => m.Notes, 14, 20, new { @class = "form-control" })
-                @Html.ValidationMessageFor(m => m.Notes)
+                @*@Html.ValidationMessageFor(m => m.Notes)*@
             </div>
 
         </div>
