--- a/src/Treehouse.FitnessFrog/Views/Shared/_Layout.cshtml
+++ b/src/Treehouse.FitnessFrog/Views/Shared/_Layout.cshtml
@@ -67,8 +67,9 @@
 
 
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
-    @*<script src="~/Scripts/jquery.validate.min.js"></script>
-    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>*@
+    <script src="~/Scripts/jquery.validate.min.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+    <script src="~/Scripts/jquery.validate.bootstrap.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
     <script src="~/Content/bootstrap-datepicker.min.js"></script>
 
@@ -78,7 +79,7 @@
             todayHighlight: true,
             language: "it",
             autoclose: true,
-            format: 'd-m-yyyy'
+            format: 'm/d/yyyy'
         });
     </script>
 </body>
