Completed the edit entry page

--- a/src/Treehouse.FitnessFrog/Views/Entries/Edit.cshtml
+++ b/src/Treehouse.FitnessFrog/Views/Entries/Edit.cshtml
@@ -1,6 +1,8 @@
-﻿
+﻿@Model Treehouse.FitnessFrog.Models.Entry
 @{
     ViewBag.Title = "Edit Entry";
 }
 
 <h2>@ViewBag.Title</h2>
+
+@Html.Partial("_EntryForm") 
