--- a/src/Treehouse.FitnessFrog/Views/Entries/Add.cshtml
+++ b/src/Treehouse.FitnessFrog/Views/Entries/Add.cshtml
@@ -1,110 +1,12 @@
 ﻿<!--Make view strongly typed by adding the model directive-->
-
 @model Treehouse.FitnessFrog.Models.Entry
-
-@using Treehouse.FitnessFrog.Models         @*This is for fetching intensity level in check boxes*@
 
 @{
     ViewBag.Title = "Add Entry";
-
-    <!--Adding Drop down to our page-->
-    //var selectListItems = new[]
-    //{
-    //    new SelectListItem(){Value="1",Text="Item 1", Selected=false},
-    //    new SelectListItem(){Value="2",Text="Item 2", Selected=true}
-    //};
-    /*var items = new[]
-    {
-        new {Id=1,Name="Item1"},
-        new {Id=2,Name="Item2"}
-    };
-    var selectListItems = new SelectList(items, "Id", "Name");*/
 }
-
-@*<select>
-        <option value="1">Item 1</option>
-        <option value="2" selected>Item 2</option>
-    </select>*@
 
 <h2>@ViewBag.Title</h2>
 
-
-@*Use Html Helper method to render the form element*@
-
-@using (Html.BeginForm())
-{
-    @Html.ValidationSummary("The following erros were found: ", new { @class = "alert alert-danger" }) @*Displaying all validation summary messages at top of the form *@
-
-    <div class="row">
-
-        <div class="col-md-6">
-
-            <div class="form-group">
-                @Html.LabelFor(m => m.Date, new { @class = "control-label" })
-                @Html.TextBoxFor(m => m.Date, "{0:d}", new { @class = "form-control datepicker" })
-            </div>  
-
-            <div class="form-group">
-                @Html.LabelFor(m => m.ActivityId, new { @class = "control-label" })
-                @Html.DropDownListFor(m => m.ActivityId,
-                            (SelectList)ViewBag.ActivitiesSelectListItems,"", new { @class = "form-control" })
-                @Html.ValidationMessageFor(m => m.ActivityId)   @*Validation message at field level*@
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(m => m.Duration, new { @class = "control-label" })
-                @Html.TextBoxFor(m => m.Duration, null, new { @class = "form-control" })
-                @Html.ValidationMessageFor(m => m.Duration, null)
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(m => m.Intensity, new { @class = "control-label" })
-                <div>
-                    <label class="radio-inline">
-                        @Html.RadioButtonFor(m => m.Intensity, Entry.IntensityLevel.Low) @Entry.IntensityLevel.Low
-                    </label>
-                    <label class="radio-inline">
-                        @Html.RadioButtonFor(m => m.Intensity, Entry.IntensityLevel.Medium)@Entry.IntensityLevel.Medium
-                    </label>
-                    <label class="radio-inline">
-                        @Html.RadioButtonFor(m => m.Intensity, Entry.IntensityLevel.High) @Entry.IntensityLevel.High
-                    </label>
-                </div>
-            </div>
-
-            <div class="form-group">
-                <div class="checkbox">
-                    <label>
-                        @Html.CheckBoxFor(m => m.Exclude) @Html.DisplayNameFor(m => m.Exclude)
-                    </label>
-                </div>
-            </div>
-
-        </div>
-
-        <div class="col-md-6">
-
-            <div class="form-group">
-                @Html.LabelFor(m => m.Notes, new { @class = "control-label" })
-                @Html.TextAreaFor(m => m.Notes, 14, 20, new { @class = "form-control" })
-                @*@Html.ValidationMessageFor(m => m.Notes)*@
-            </div>
-
-        </div>
-
-        <div class="col-md-12">
-            <div class="pad-top">
-                <button type="submit" class="btn btn-success btn-lg margin-right">
-                    <span class="glyphicon glyphicon-save"></span> Save
-                </button>
-                <a href="@Url.Action("Index")" class="btn btn-warning btn-lg">
-                    <span class="glyphicon glyphicon-remove"></span> Cancel
-                </a>
-            </div>
-        </div>
-
-    </div>
-}
-
-
+@*PartialView*@
+@Html.Partial("_EntryForm") 
 
