Added confirmation messages

--- a/src/Treehouse.FitnessFrog/Views/Entries/Index.cshtml
+++ b/src/Treehouse.FitnessFrog/Views/Entries/Index.cshtml
@@ -4,6 +4,17 @@
     ViewBag.Title = "Entries";
 }
 
+
+@if(TempData["Message"]!=null)
+{
+    <div class="alert alert-success alert-dismissible" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+        @TempData["Message"]
+    </div>
+}
+
 <div class="stats">
     <h2 class="stats-header h3">Minutes of Activity</h2>
     <div class="stats-left">
